-
Bug
-
Resolution: Done
-
P4: Low
-
5.0.0
-
None
When the .import statement is used to import a QML module into a JS file and the qualifier or version is omitted, as here:
sample.js
.import MyModule 1.0
function doStuff() {
...
}
QML produces the following diagnostic:
sample.js:1: SyntaxError: Unexpected token .
A better error would be:
sample.js:1:8: Module import requires version and qualifier
- resulted from
-
QTBUG-24596 JS module API doesn't work within JavaScript
-
- Closed
-
| For Gerrit Dashboard: QTBUG-24867 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 30250,5 | Improved error messages for malformed .import statements | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |