Improved error messages for malformed .import statements

Report errors in .import statements, rather than pass them through
to V8 to yield 'Syntax error'.

Task-number: QTBUG-24867
Change-Id: I111b3bd3d198e97f42b29591f61753e86295aeb2
Reviewed-by: Glenn Watson <glenn.watson@nokia.com>